lib/src/compiler/tests/testdata/errors/110.out
error[E027]: invalid integer
 --> line:3:20
  |
3 |     $a = "foo" xor(256)
  |                    ^^^ this number is out of the valid range: [0, 255]
  |